# bpoe_events_reports

./: .gitignore  .pre-commit-config.yaml  README.md  db_handler.postman_collection.json  dev_run.bat  dev_run.sh  pyproject.toml
.github/workflows/: pull-request.yml  push-to-develop.yml
.run/: Unnamed.run.xml
docker/: .env.template  Dockerfile  docker-compose.yml
docs/: 01_ADR-Adoption-of-REST-API.md
docs/queries/: db_handler.postman_collection.json
result/: pytest_result.xml
src/: main.py
src/api/: dependencies.py  examples.py  exceptions.py  models.py  routers.py
src/api/_deprecated/: models.py
src/config/: conf_logger.py  config.py  lifespan.py
src/core/models/: __init__.py  events.py  inconsistencies.py  participants.py  transactions.py
tests/: conftest.py  test_main.py
tests/api/: test_routers.py
tests/result/: pytest_result.xml
